# node-yara-rs

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  index.d.ts  index.js  package.json  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml  newsfile.yml
__test__/: index.spec.mjs  json_test.yara  test.json  test.yara
changelog.d/: +dotted_keys.misc  +either.feature  +get_values.misc  +json.feature  +npmignore.misc  +overloaded_value_exists.feat  +string.bugfix  +tests.misc  +towncrier.misc  +update_deps.misc
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
