[package]
edition = "2021"
name = "mtrnord_node-yara-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
    "napi8",
    "async",
    "tokio_rt",
    "error_anyhow",
    "serde-json",
] }
napi-derive = "2.12.2"
serde_json = "1.0.107"
yara = { version = "0.21.0", features = [
    "module-magic",
    "serde",
] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
