[package]
edition = "2021"
name = "mtrnord_node-yara-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
    "napi8",
    "error_anyhow",
] }
napi-derive = "2.12.2"
yara = { version = "0.21.0", features = ["yara-static"] }

[target.x86_64-pc-windows-msvc.dependencies]
yara = { version = "0.21.0", features = ["yara-static", "vendored"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
